Modify my cv and upload new cv.pdf

--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -11,14 +11,31 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {Master of Business Administration} % Degree
+    {NCHU(National Chung Hsing University)} % Institution
+    {Taichung, TAIWAN} % Location
+    {Sep. 2011 - June. 2013} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Master thesis - Product Line Design of Conspicuous Goods in a Distribution Channel.}
       \end{cvitems}
+      \begin{cvitems} % Description(s) bullet points
+        \item {Class Rank: 6th/28 .}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+
+
+  \cventry
+    {B.A. in Information Management} % Degree
+    {National Kaohsiung University of Science and Technology} % Institution
+    {Kaohsiung, TAIWAN} % Location
+    {Sep. 2006 - June. 2011} % Date(s)
+    {
+      % \begin{cvitems} % Description(s) bullet points
+      %   \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+      % \end{cvitems}
     }
 
 %---------------------------------------------------------
