--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -11,129 +11,71 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Architect} % Job title
-    {Omnious. Co., Ltd.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2017 - May. 2018} % Date(s)
+    {Data Engineer} % Job title
+    {Foxconn Technology Group} % Organization
+    {Kaohsiung, Taiwan} % Location
+    {Aug. 2019 - Now} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
+        \item {Designed, developed and deployed the overall asynchronous architecture in pcb printer parameter system via Python, Celery, RabbitMQ, Docker, Supervisor, PostgreSQL.}
+        \item {Design and developed the overall backend analytical job architecture and RESTful API services with Docker-Compose, RabbitMQ, Flask, PostgreSQL in panel data analysis system.}
+        \item {Refactored the code of Blind-Search service and improved reusable and flexible in panel data analysis system.}
+        \item {Built fully automated CI/CD pipelines on Drone CI for data platform project with docker-compose.}
+        \item {Surveyed massive big data tech stacks, implemented and deployed CDH infrastructure including HDFS, Impala, Kudu, Zookeeper.}
+        \item {Designed the overall tech architecture and leveraged suitable tech stack in data platform project.}
+        \item {Implemented core pipeline running sort algorithm with Python, MongoDB in data platform project.}
+        \item {Designed and developed many RESTful APIs via FastAPI, Uvicorn, Gunicorn, also designed schema for MongoDB in data platform project.}
+        \item {Actively attended internal tech sharing, talked about clean code guide, virtual environment and package management experience in Python.}
+        \item {Actively involved to edit Python coding style guide reference Google style guide.}
+        \item {Wrote the SQL commands for web team to integrate the API.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jan. 2016 - Jun. 2017} % Date(s)
+    {Data Engineer} % Job title
+    {Pi Software Corp.} % Organization
+    {Kaohsiung, Taiwan} % Location
+    {Mar. 2017 - July. 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+        \item {Built and developed streaming and batch data pipeline of https://zi.media (Alexa Taiwan top 50 site) via Kafka, Flask, MongoDB, Redis, Memcached, Elasticsearch.}
+        \item {Developed and deployed RESTful APIs to handle article data(daily request around 1 million times) in zi.media with Nginx, Uwsgi, Flask, Redis, MongoDB.}
+        \item {Designed and developed nlp services including article keyword extraction(tf-idf), content based recommendations(cosine-similarity), text classification(fasttext), topic model (LDA).}
+        \item {Developed and maintained more than 50 web crawlers and optimized the company’s internal distributed crawler system with Kafka, Scrapy, Redis and OrangePi.}
+        \item {Developed and deployed ETL system to process company and interview data with calculating ranking score for website (https://interview.tw), and use the RFM model to improve the popular ranking algorithm with Elasticsearch and MongoDB.}
+        \item {Developed and deployed salary data analysis report with ETL job for website (https://salary.tw) with Pandas, MongoDB, Numpy.}
+        \item {Developed and deployed finance data ETL system and stock news robot for website (https://www.moneybar.com.tw/).}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Researcher} % Job title
-    {Undergraduate Research, Machine Learning Lab(Prof. Seungjin Choi)} % Organization
-    {Pohang, S.Korea} % Location
-    {Mar. 2016 - Exp. Jun. 2017} % Date(s)
+    {Procurement specialist} % Job title
+    {Taiwan Hopax Chemicals. Mfg. Co., Ltd.} % Organization
+    {Kaohsiung, Taiwan} % Location
+    {July. 2014 - Mar. 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched classification algorithms(SVM, CNN) to improve accuracy of human exercise recognition with wearable device.}
-        \item {Developed two TIZEN applications to collect sample data set and to recognize user exercise on SAMSUNG Gear S.}
+        \item {Responsible for the company's major chemical raw materials sourcing.}
+        \item {Responsible for cost reduction and supplier management.}
+        \item {Developed the price prediction model of styrene and acrylic acid, using R language.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
-  \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Researcher for <Detecting video’s torrents using image similarity algorithms>} % Job title
-    {Undergraduate Research, Computer Vision Lab(Prof. Bohyung Han)} % Organization
-    {Pohang, S.Korea} % Location
-    {Sep. 2012 - Feb. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Researched means of retrieving a corresponding video based on image contents using image similarity algorithm.}
-        \item {Implemented prototype that users can obtain torrent magnet links of corresponding video relevant to an image on web site.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer Trainee} % Job title
-    {Software Maestro (funded by Korea Ministry of Knowledge and Economy)} % Organization
-    {Seoul, S.Korea} % Location
-    {Jul. 2012 - Jun. 2013} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Performed research memory management strategies of OS and implemented in Python an interactive simulator for Linux kernel memory management.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer. Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
-    }
+  % \cventry
+  %   {Research assistant} % Job title
+  %   {National Chung Hsing University} % Organization
+  %   {Taichung, Taiwan} % Location
+  %   {Sep. 2012 - Jun. 2013} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) of tasks/responsibilities
+  %       \item {International journals researching the field of game theory.}
+  %       \item {Assist in writing the National Science Council research plan.}
+  %       \item {Write the game model code in Mathematica.}
+  %     \end{cvitems}
+  %   }
 
 %---------------------------------------------------------
 \end{cventries}
