--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -11,28 +11,33 @@
 
 %---------------------------------------------------------
   \cvskill
-    {DevOps} % Category
-    {AWS, Docker, Kubernetes, Rancher, Vagrant, Packer, Terraform, Jenkins, CircleCI} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Back-end} % Category
-    {Koa, Express, Django, REST API} % Skills
-
-%---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Hugo, Redux, React, HTML5, LESS, SASS} % Skills
-
-%---------------------------------------------------------
-  \cvskill
     {Programming} % Category
-    {Node.js, Python, JAVA, OCaml, LaTeX} % Skills
+    {Python, SQL} % Skills
+   % Skills
 
+%---------------------------------------------------------
+  \cvskill
+    {Backend} % Category
+    {FastAPI, Flask, PostgreSQL, MongoDB, Redis, Elasticsearch, RabbitMQ, Celery, Nginx, Memcached} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Data Pipeline/Big Data} % Category
+    {Kafka, Hadoop, Spark(PySpark), Prefect, Impala, Sqoop, Hive, Kudu} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {DevOps} % Category
+    {Docker, GCP, Linux(Ubuntu, CentOS), Drone CI, Gitlab, Supervisor, Shell Scripting}
+
+%---------------------------------------------------------
+  \cvskill
+    {Web crawler}
+    {Scrapy, Scrapy-splash, Beautiful Soup, Selenium}
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Korean, English, Japanese} % Skills
+    {Chinese, English (Toeic 790)} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
