--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -17,14 +17,14 @@
 %-------------------------------------------------------------------------------
 % CONFIGURATIONS
 %-------------------------------------------------------------------------------
-% A4 paper size by default, use 'letterpaper' for US letter
+% A4 paper size by default, use 'letterpaper' fqeuryor US letter
 \documentclass[11pt, a4paper]{awesome-cv}
 
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
 
 % Specify the location of the included fonts
-\fontdir[fonts/]
+\fontdir[../fonts/]
 
 % Color for highlights
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
@@ -53,15 +53,14 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Byungjin}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Chia-Yin}{Wu}
+\position{Data Engineer{\enskip\cdotp\enskip}Software Engineer}
+\address{Kaohsiung City, Taiwan}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{(+886) 975-193693}
+\email{apexkaws911@gmail.com}
+\github{apexkaws911}
+\linkedin{apexkaws911}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -73,7 +72,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+\quote{``Stay hungry, stay foolish."}
 
 
 %-------------------------------------------------------------------------------
@@ -87,7 +86,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Byungjin Park~~~·~~~Résumé}
+  {ChiaYin Wu~~~·~~~Résumé}
   {\thepage}
 
 
@@ -97,12 +96,12 @@
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex}
 \input{resume/experience.tex}
-\input{resume/honors.tex}
-\input{resume/presentation.tex}
-\input{resume/writing.tex}
-\input{resume/committees.tex}
+% \input{resume/honors.tex}
+%\input{resume/presentation.tex}
+%input{resume/writing.tex}
+%\input{resume/committees.tex}
 \input{resume/education.tex}
-\input{resume/extracurricular.tex}
+% \input{resume/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
