modify wording of experience at foxconn.

--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -19,7 +19,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Designed, developed and deployed the overall asynchronous architecture in pcb printer parameter system via Python, Celery, RabbitMQ, Docker, Supervisor, PostgreSQL.}
         \item {Design and developed the overall backend analytical job architecture and RESTful API services with Docker-Compose, RabbitMQ, Flask, PostgreSQL in panel data analysis system.}
-        \item {Refactored the code of Blind-Search service and improved reusable and flexible in panel data analysis system.}
+        \item {Refactored the code of Blind-Search service to improve reusability and flexibility in panel data analysis system.}
         \item {Built fully automated CI/CD pipelines on Drone CI for data platform project with docker-compose.}
         \item {Surveyed massive big data tech stacks, implemented and deployed CDH infrastructure including HDFS, Impala, Kudu, Zookeeper.}
         \item {Designed the overall tech architecture and leveraged suitable tech stack in data platform project.}
