refine some wording for work experience and add skills of ml in skill set

--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -16,27 +16,37 @@
     {Taichung, TAIWAN} % Location
     {Sep. 2011 - June. 2013} % Date(s)
     {
+    \vspace{+0.5cm}
       \begin{cvitems} % Description(s) bullet points
         \item {Master thesis - Product Line Design of Conspicuous Goods in a Distribution Channel.}
       \end{cvitems}
       \begin{cvitems} % Description(s) bullet points
-        \item {Class Rank: 6th/28 .}
+        \item {Class Rank: 6th/28.}
+      \end{cvitems}
+      \begin{cvitems} % Description(s) bullet points
+        \item {Field of research: Game theory}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
+  
 
+%---------------------------------------------------------
+\end{cventries}
+\vspace{+0.5cm}
 
+\begin{cventries}
+% %---------------------------------------------------------
   \cventry
-    {B.A. in Information Management} % Degree
-    {National Kaohsiung University of Science and Technology} % Institution
-    {Kaohsiung, TAIWAN} % Location
-    {Sep. 2006 - June. 2011} % Date(s)
-    {
-      % \begin{cvitems} % Description(s) bullet points
-      %   \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      % \end{cvitems}
-    }
+  {B.A. in Information Management} % Degree
+  {National Kaohsiung University of Science and Technology} % Institution
+  {Kaohsiung, TAIWAN} % Location
+  {Sep. 2006 - June. 2011} % Date(s)
+  {
+    % \begin{cvitems} % Description(s) bullet points
+    %   \item {}
+    % \end{cvitems}
+  }
 
 %---------------------------------------------------------
 \end{cventries}
