--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -20,13 +20,13 @@
         \item {Designed, developed and deployed the overall asynchronous architecture in pcb printer parameter system via Python, Celery, RabbitMQ, Docker, Supervisor, PostgreSQL.}
         \item {Design and developed the overall backend analytical job architecture and RESTful API services with Docker-Compose, RabbitMQ, Flask, PostgreSQL in panel data analysis system.}
         \item {Refactored the code of Blind-Search service to improve reusability and flexibility in panel data analysis system.}
-        \item {Built fully automated CI/CD pipelines on Drone CI for data platform project with docker-compose.}
-        \item {Surveyed massive big data tech stacks, implemented and deployed CDH infrastructure including HDFS, Impala, Kudu, Zookeeper.}
+        \item {Built fully automated CI/CD pipelines via Drone CI, Gitlab for data platform project with docker-compose.}
+        \item {Surveyed massive big data tech stacks, implemented and deployed CDH infrastructure including HDFS, Spark, Kafka, Impala, Kudu, Zookeeper.}
         \item {Designed the overall tech architecture and leveraged suitable tech stack in data platform project.}
         \item {Implemented core pipeline running sort algorithm with Python, MongoDB in data platform project.}
         \item {Designed and developed many RESTful APIs via FastAPI, Uvicorn, Gunicorn, also designed schema for MongoDB in data platform project.}
-        \item {Actively attended internal tech sharing, talked about clean code guide, virtual environment and package management experience in Python.}
-        \item {Actively involved to edit Python coding style guide reference Google style guide.}
+        \item {Actively attended internal tech sharing to give talks, talked about clean code guide, virtual environment and package management experience in Python.}
+        \item {Actively involved to set up Python coding style guide reference Google style guide.}
         \item {Wrote the SQL commands for web team to integrate the API.}
       \end{cvitems}
     }
@@ -39,9 +39,9 @@
     {Mar. 2017 - July. 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Built and developed streaming and batch data pipeline of https://zi.media (Alexa Taiwan top 50 site) via Kafka, Flask, MongoDB, Redis, Memcached, Elasticsearch.}
+        \item {Built and developed streaming and batch data pipeline of https://zi.media (Alexa Taiwan top 50 site) via Python, Kafka, MongoDB, Redis, Memcached, Elasticsearch.}
         \item {Developed and deployed RESTful APIs to handle article data(daily request around 1 million times) in zi.media with Nginx, Uwsgi, Flask, Redis, MongoDB.}
-        \item {Designed and developed nlp services including article keyword extraction(tf-idf), content based recommendations(cosine-similarity), text classification(fasttext), topic model (LDA).}
+        \item {Designed and developed NLP services and web api including article keyword extraction(tf-idf), content based recommendations(cosine-similarity), text classification(fasttext), topic model (LDA).}
         \item {Developed and maintained more than 50 web crawlers and optimized the company’s internal distributed crawler system with Kafka, Scrapy, Redis and OrangePi.}
         \item {Developed and deployed ETL system to process company and interview data with calculating ranking score for website (https://interview.tw), and use the RFM model to improve the popular ranking algorithm with Elasticsearch and MongoDB.}
         \item {Developed and deployed salary data analysis report with ETL job for website (https://salary.tw) with Pandas, MongoDB, Numpy.}
@@ -51,7 +51,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Procurement specialist} % Job title
+    {Procurement Specialist} % Job title
     {Taiwan Hopax Chemicals. Mfg. Co., Ltd.} % Organization
     {Kaohsiung, Taiwan} % Location
     {July. 2014 - Mar. 2017} % Date(s)
