--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Currently as data engineer at Foxconn tech group. With 3+ years experience specializing in the data engineering, data architecture, and backend development. Super geek who loves Python, data engineering and macOS and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+Currently as data engineer of data analytics \& AI team at Foxconn tech group. With 3+ years experience specializing in the data engineering, data architecture, and backend development. Super geek who loves Python, data engineering and macOS and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
 \end{cvparagraph}
