--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -22,8 +22,8 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Data Pipeline/Big Data} % Category
-    {Kafka, Hadoop, Spark(PySpark), Prefect, Impala, Sqoop, Hive, Kudu} % Skills
+    {Big Data/Machine Learning} % Category
+    {Kafka, Hadoop, Spark(PySpark), Prefect, Impala, Sqoop, Hive, Kudu, Scikit-learn, PyTorch, Gensim, Pandas, Numpy} % Skills
 
 %---------------------------------------------------------
   \cvskill
