update skill set wording

--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -23,7 +23,7 @@
 %---------------------------------------------------------
   \cvskill
     {Big Data/Machine Learning} % Category
-    {Kafka, Hadoop, Spark(PySpark), Prefect, Impala, Sqoop, Hive, Kudu, Scikit-learn, PyTorch, Gensim, Pandas, Numpy} % Skills
+    {Kafka, Hadoop, Spark(PySpark), Prefect, Impala, Sqoop, Hive, Kudu, Scikit-learn, Gensim, Pandas, Numpy} % Skills
 
 %---------------------------------------------------------
   \cvskill
